fix center align buttons on mobile

--- a/style.css
+++ b/style.css
@@ -158,15 +158,9 @@ body {
   margin-top: 15px;
 }
 
-.marathon-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 /* Mobile styles */
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .hcenter {
     width: 100%;
   }
@@ -175,7 +169,7 @@ body {
     width: calc(80vmin / var(--grid_size));
     height: calc(80vmin / var(--grid_size));
     margin: 2px;
-    font-size: calc(30vmin / var(--grid_size));
+    font-size: calc(25vmin / var(--grid_size));
   }
 
   .size-select {
@@ -187,15 +181,15 @@ body {
     height: 10vmin;
   }
 
-  .start-btn {
-    width: 40vmin;
-    height: 12vmin;
-    margin-bottom: 5vmin;
-  }
-
+  .start-btn,
   .marathon-btn {
     width: 40vmin;
     height: 12vmin;
+    margin-right: 0;
+  }
+
+  .start-btn {
+    margin-bottom: 5vmin;
   }
 
   .start-marathon-container {
